Changed makes download to car query API