@@ -2,19 +2,36 @@ package com.cct.repository.impl;
 
 import com.cct.model.Make;
 import com.cct.repository.api.MakeRepository;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Element;
+import org.json.JSONObject;
+import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Repository;
+import org.springframework.web.client.RestTemplate;
 
-import java.io.IOException;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import static org.springframework.http.HttpMethod.GET;
 
 @Repository
 public class MakeRepositoryImpl implements MakeRepository {
 
-    private final String url = "https://www.autoevolution.com";
+    private final RestTemplate restTemplate;
+    private final HttpEntity<String> httpEntity;
+
+    public MakeRepositoryImpl(RestTemplateBuilder restTemplateBuilder) {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
+        headers.add("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.99 Safari/537.36");
+
+        this.httpEntity = new HttpEntity<>("parameters", headers);
+        this.restTemplate = restTemplateBuilder.build();
+    }
 
     @Override
     public Optional<Make> findOneById(String id) {
@@ -26,28 +43,23 @@ public class MakeRepositoryImpl implements MakeRepository {
 
     @Override
     public Collection<Make> findAll() {
-        try {
-            return Jsoup
-                    .connect(url + "/cars")
-                    .get()
-                    .body()
-                    .select("[itemtype='https://schema.org/Brand']")
-                    .stream()
-                    .map(this::prepareMake)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new RuntimeException("Unable to connect to " + url);
-        }
+        String response = restTemplate
+                .exchange("https://www.carqueryapi.com/api/0.3/?callback=?&cmd=getMakes", GET, httpEntity, String.class)
+                .getBody()
+                .replace("?(", "")
+                .replace(");", "");
+
+        return new JSONObject(response)
+                .getJSONArray("Makes")
+                .toList()
+                .stream()
+                .map(Map.class::cast)
+                .map(JSONObject::new)
+                .map(this::prepareMake)
+                .collect(Collectors.toList());
     }
 
-    private Make prepareMake(Element e) {
-        String id = e
-                .select("h5 > a")
-                .attr("href")
-                .replace(url, "")
-                .replace("/", "");
-        String name = e.select("h5").text();
-        String logoUrl = e.select("img").attr("src");
-        return new Make(id, name, logoUrl);
+    private Make prepareMake(JSONObject o) {
+        return new Make(o.getString("make_id"), o.getString("make_display"));
     }
 }
